# movie-agent-lab

./: .gitignore  README.md  recode.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_ai_native_tables.py  0002_extend_chat_tables.py  0003_add_extra_data_to_chat_messages.py
backend/app/: main.py
backend/app/api/v1/: auth.py  chat.py  comments.py  config.py  eval.py  knowledge.py  memory.py  movies.py  recommendations.py  router.py  users.py
backend/app/chatbot/: agent.py  intent.py  schemas.py  service.py  tools.py
backend/app/core/: config.py  database.py  deps.py  exceptions.py  llm_provider.py  redis_client.py  response.py  security.py
backend/app/crawlers/: __init__.py
backend/app/knowledge/: service.py  vector_store.py
backend/app/memory/: profile.py  scan_history.py
backend/app/models/: __init__.py  ai.py  movie.py  quiz.py  social.py  system.py  user.py
backend/app/recsys/: bootstrap.py  contracts.py  registry.py
backend/app/recsys/agentic/: mock_pipeline.py
backend/app/recsys/classic/: ab_test.py  builder.py  embedding.py  hot.py  model_serving.py  (+3 more)
backend/app/repositories/: movie_repo.py  quiz_repo.py  social_repo.py  user_repo.py
backend/app/schemas/: auth.py  common.py  movie.py
backend/app/services/: auth_service.py  movie_service.py  quiz_service.py  rec_service.py  social_service.py  stat_service.py  user_service.py
backend/app/video_understanding/: __init__.py
backend/app/workers/: __init__.py
backend/tests/: test_recsys_core.py
(+32 files in other folders)
